--- a/index.html
+++ b/index.html
@@ -1,9 +1,30 @@
-<!DOCTYPE html>
-<html lang="fr">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Calculatrice Fun</title>
+
+  <!-- Titre de la page (s’affiche dans Google) -->
+  <title>RaCe Point - Calculatrice Fun en Ligne</title>
+
+  <!-- Meta Description (important pour Google) -->
+  <meta name="description" content="Découvrez RaCe Point - une calculatrice fun et simple à utiliser. Outil gratuit en ligne pour vos calculs rapides, créé par RaCe.">
+
+  <!-- Mots-clés (Google ne l’utilise plus trop, mais certains moteurs oui) -->
+  <meta name="keywords" content="RaCe Point, calculatrice en ligne, calcul rapide, outil fun, DKM RaCe">
+
+  <!-- Auteur -->
+  <meta name="author" content="RaCe">
+
+  <!-- Open Graph (pour Facebook, WhatsApp, etc.) -->
+  <meta property="og:title" content="RaCe Point - Calculatrice Fun en Ligne">
+  <meta property="og:description" content="Une calculatrice gratuite et amusante développée par RaCe.">
+  <meta property="og:url" content="https://tonpseudo.github.io/">
+  <meta property="og:type" content="website">
+  <meta property="og:image" content="https://tonpseudo.github.io/logo.png"> <!-- Mets un logo ou image -->
+
+  <!-- Favicon -->
+  <link rel="icon" href="favicon.ico" type="image/x-icon">
+
+  <!-- Feuille de style -->
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
