--- a/index.html
+++ b/index.html
@@ -28,6 +28,9 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
+  <p style="text-align:center; font-size: 18px;">
+  Bienvenue sur <strong>RaCe Point</strong> — la mini calculatrice fun et rapide créée par RaCe, disponible gratuitement en ligne !
+  </p>
   <div class="calculator">
     <!-- Écran -->
     <input type="text" id="screen" disabled placeholder="0">
